zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_send_keys_action_to_screen.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{:#?}\", received_write_instructions)"
---
[
    Write(
        [
            1,
        ],
        0,
        None,
        0,
    ),
    Write(
        [
            120,
        ],
        0,
        None,
        0,
    ),
]
