zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_set_pane_border_style_action-3.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{}\", snapshot_count)"
---
2
