zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_stack_panes_action-3.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 3689
expression: "format!(\"{}\", snapshot_count)"
---
2
