zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_toggle_active_tab_sync_action.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{:?}\", received_write_instructions)"
---
[Write([102, 111, 111], 0, None, 0), Write([102, 111, 111], 1, None, 0)]
